--- a/app.css
+++ b/app.css
@@ -6,7 +6,7 @@
   }
 
 .qbox {
-  background-color: rgba(0, 102, 255, 0.2);
+  background-color: rgba(0, 102, 255, 0.4);
   /* box-shadow:0 0rem 5rem 4rem rgba(0, 102, 255, 0.8); */
   flex-direction: column;
   display: flex;
@@ -210,8 +210,8 @@
 
 .questionImg {
   border-radius: 1rem;
-  height: 50vh;
-  width: auto;
+  max-width: 100%;
+  max-height: 60vh;
   margin:1rem;
 }
 
@@ -279,3 +279,18 @@
   right: 22.5rem;
 }
 
+.skip {
+  background : rgb(228, 228, 228);
+  color: rgb(29, 3, 3);
+  margin:1rem;
+
+}
+
+.icon {
+  height: 2rem;
+}
+
+
+.avengers {
+  margin:1rem;
+}
